  - add byte size string support

Tests:
* open close
  - add parent support
* read
  - add parent support
* seek
  - add parent support
* add integrity tests
* add pyvmdk

* Test images
  - vmdk flat
  - vmdk flat split (done)
  - Monolithic sparse (done)
  - 2GB extent sparse (done)
  - cowd sparse
  - cowd sparse split
  - compressed (done)
  - (compressed) with parent (done)

20141221
* worked on Python 3 support
* worked on tests

20141205
* worked on test scripts

20141129
* code clean up

20141119
* small fixes for stand-alone usage of libfvalue

20141114
* code clean up

20141106
* worked on multi-threading support

20141030
* added tests/pyvmdk_test_open_close.py to make dist

20141029
* bug fix in Python-bindings

20141027
* changes for deployment

20141022
* changes for deployment

20141021
* changes for deployment

20140929
* removed README.macosx
* changes for project site move

20140803
* bug fix in Python-bindings

20140729
* updated dependencies

20140421
* changes for mingw and msvsccp build
* updated msvsccp files
* code clean up
* worked on libvmdk_handle_open_extent_data_files_file_io_pool
* added support for corruption scenario where grain table entries is lager
  than the maximum number of sectors.

20140420
* updated dependencies
* updated Python bindings
* worked on exposing extent information

20140417
* worked on support for a stream optimized VMDK file without a grain table

20140416
* worked on support for a stream optimized VMDK file without a grain table
  - added support for grain directory sector value -1
* added debug information

20140119
* 2014 update
* updated dependencies

20131210
* fixed issue in mount handle for empty basename

20131209
* updated dependencies
* worked on pyvmdk
* worked on compressed VMDK sparse extent data files support
* vmdkmount bug fix in parent chain mounting

20131017
* updated dependencies
* worked on pyvmdk integer support

20131008
* updated msvscpp files

20131004
* updated dependencies